--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,6 @@
+/* Taufan Ikhsan Firdaus */
+/* 10123903 */
+/* IF12 */
 *{
     margin: 0;
     padding: 0;
@@ -383,6 +386,7 @@ footer .media .sosmed ul li {
 
     .about .box-about .box:nth-child(1) img {
         width: 150px;
+        height: 50px;
     }
 
     footer .media .sosmed ul li {
